--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -118,7 +118,7 @@ button,
 input,
 select,
 textarea {
-  font-family: "Merriweather", "Georgia", serif;
+  font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
 
 code,
@@ -686,11 +686,11 @@ a.has-text-dark:hover, a.has-text-dark:focus {
 }
 
 .has-text-primary {
-  color: #ffb3b3 !important;
+  color: #00d1b2 !important;
 }
 
 a.has-text-primary:hover, a.has-text-primary:focus {
-  color: #ff8080 !important;
+  color: #009e86 !important;
 }
 
 .has-text-link {
@@ -726,11 +726,11 @@ a.has-text-warning:hover, a.has-text-warning:focus {
 }
 
 .has-text-danger {
-  color: #ff470f !important;
+  color: #ff3860 !important;
 }
 
 a.has-text-danger:hover, a.has-text-danger:focus {
-  color: #db3300 !important;
+  color: #ff0537 !important;
 }
 
 .has-text-twitter {
@@ -1596,12 +1596,12 @@ a.box:active {
   color: whitesmoke;
 }
 .button.is-primary {
-  background-color: #ffb3b3;
+  background-color: #00d1b2;
   border-color: transparent;
   color: #fff;
 }
 .button.is-primary:hover, .button.is-primary.is-hovered {
-  background-color: #ffa6a6;
+  background-color: #00c4a7;
   border-color: transparent;
   color: #fff;
 }
@@ -1610,21 +1610,21 @@ a.box:active {
   color: #fff;
 }
 .button.is-primary:focus:not(:active), .button.is-primary.is-focused:not(:active) {
-  box-shadow: 0 0 0 0.125em rgba(255, 179, 179, 0.25);
+  box-shadow: 0 0 0 0.125em rgba(0, 209, 178, 0.25);
 }
 .button.is-primary:active, .button.is-primary.is-active {
-  background-color: #ff9a9a;
+  background-color: #00b89c;
   border-color: transparent;
   color: #fff;
 }
 .button.is-primary[disabled] {
-  background-color: #ffb3b3;
+  background-color: #00d1b2;
   border-color: transparent;
   box-shadow: none;
 }
 .button.is-primary.is-inverted {
   background-color: #fff;
-  color: #ffb3b3;
+  color: #00d1b2;
 }
 .button.is-primary.is-inverted:hover {
   background-color: #f2f2f2;
@@ -1633,29 +1633,29 @@ a.box:active {
   background-color: #fff;
   border-color: transparent;
   box-shadow: none;
-  color: #ffb3b3;
+  color: #00d1b2;
 }
 .button.is-primary.is-loading:after {
   border-color: transparent transparent #fff #fff !important;
 }
 .button.is-primary.is-outlined {
   background-color: transparent;
-  border-color: #ffb3b3;
-  color: #ffb3b3;
+  border-color: #00d1b2;
+  color: #00d1b2;
 }
 .button.is-primary.is-outlined:hover, .button.is-primary.is-outlined:focus {
-  background-color: #ffb3b3;
-  border-color: #ffb3b3;
+  background-color: #00d1b2;
+  border-color: #00d1b2;
   color: #fff;
 }
 .button.is-primary.is-outlined.is-loading:after {
-  border-color: transparent transparent #ffb3b3 #ffb3b3 !important;
+  border-color: transparent transparent #00d1b2 #00d1b2 !important;
 }
 .button.is-primary.is-outlined[disabled] {
   background-color: transparent;
-  border-color: #ffb3b3;
+  border-color: #00d1b2;
   box-shadow: none;
-  color: #ffb3b3;
+  color: #00d1b2;
 }
 .button.is-primary.is-inverted.is-outlined {
   background-color: transparent;
@@ -1664,7 +1664,7 @@ a.box:active {
 }
 .button.is-primary.is-inverted.is-outlined:hover, .button.is-primary.is-inverted.is-outlined:focus {
   background-color: #fff;
-  color: #ffb3b3;
+  color: #00d1b2;
 }
 .button.is-primary.is-inverted.is-outlined[disabled] {
   background-color: transparent;
@@ -1981,12 +1981,12 @@ a.box:active {
   color: rgba(0, 0, 0, 0.7);
 }
 .button.is-danger {
-  background-color: #ff470f;
+  background-color: #ff3860;
   border-color: transparent;
   color: #fff;
 }
 .button.is-danger:hover, .button.is-danger.is-hovered {
-  background-color: #ff3d03;
+  background-color: #ff2b56;
   border-color: transparent;
   color: #fff;
 }
@@ -1995,21 +1995,21 @@ a.box:active {
   color: #fff;
 }
 .button.is-danger:focus:not(:active), .button.is-danger.is-focused:not(:active) {
-  box-shadow: 0 0 0 0.125em rgba(255, 71, 15, 0.25);
+  box-shadow: 0 0 0 0.125em rgba(255, 56, 96, 0.25);
 }
 .button.is-danger:active, .button.is-danger.is-active {
-  background-color: #f53900;
+  background-color: #ff1f4b;
   border-color: transparent;
   color: #fff;
 }
 .button.is-danger[disabled] {
-  background-color: #ff470f;
+  background-color: #ff3860;
   border-color: transparent;
   box-shadow: none;
 }
 .button.is-danger.is-inverted {
   background-color: #fff;
-  color: #ff470f;
+  color: #ff3860;
 }
 .button.is-danger.is-inverted:hover {
   background-color: #f2f2f2;
@@ -2018,29 +2018,29 @@ a.box:active {
   background-color: #fff;
   border-color: transparent;
   box-shadow: none;
-  color: #ff470f;
+  color: #ff3860;
 }
 .button.is-danger.is-loading:after {
   border-color: transparent transparent #fff #fff !important;
 }
 .button.is-danger.is-outlined {
   background-color: transparent;
-  border-color: #ff470f;
-  color: #ff470f;
+  border-color: #ff3860;
+  color: #ff3860;
 }
 .button.is-danger.is-outlined:hover, .button.is-danger.is-outlined:focus {
-  background-color: #ff470f;
-  border-color: #ff470f;
+  background-color: #ff3860;
+  border-color: #ff3860;
   color: #fff;
 }
 .button.is-danger.is-outlined.is-loading:after {
-  border-color: transparent transparent #ff470f #ff470f !important;
+  border-color: transparent transparent #ff3860 #ff3860 !important;
 }
 .button.is-danger.is-outlined[disabled] {
   background-color: transparent;
-  border-color: #ff470f;
+  border-color: #ff3860;
   box-shadow: none;
-  color: #ff470f;
+  color: #ff3860;
 }
 .button.is-danger.is-inverted.is-outlined {
   background-color: transparent;
@@ -2049,7 +2049,7 @@ a.box:active {
 }
 .button.is-danger.is-inverted.is-outlined:hover, .button.is-danger.is-inverted.is-outlined:focus {
   background-color: #fff;
-  color: #ff470f;
+  color: #ff3860;
 }
 .button.is-danger.is-inverted.is-outlined[disabled] {
   background-color: transparent;
@@ -2719,14 +2719,14 @@ a.box:active {
 }
 .input.is-primary,
 .textarea.is-primary {
-  border-color: #ffb3b3;
+  border-color: #00d1b2;
 }
 .input.is-primary:focus, .input.is-primary.is-focused, .input.is-primary:active, .input.is-primary.is-active,
 .textarea.is-primary:focus,
 .textarea.is-primary.is-focused,
 .textarea.is-primary:active,
 .textarea.is-primary.is-active {
-  box-shadow: 0 0 0 0.125em rgba(255, 179, 179, 0.25);
+  box-shadow: 0 0 0 0.125em rgba(0, 209, 178, 0.25);
 }
 .input.is-link,
 .textarea.is-link {
@@ -2774,14 +2774,14 @@ a.box:active {
 }
 .input.is-danger,
 .textarea.is-danger {
-  border-color: #ff470f;
+  border-color: #ff3860;
 }
 .input.is-danger:focus, .input.is-danger.is-focused, .input.is-danger:active, .input.is-danger.is-active,
 .textarea.is-danger:focus,
 .textarea.is-danger.is-focused,
 .textarea.is-danger:active,
 .textarea.is-danger.is-active {
-  box-shadow: 0 0 0 0.125em rgba(255, 71, 15, 0.25);
+  box-shadow: 0 0 0 0.125em rgba(255, 56, 96, 0.25);
 }
 .input.is-twitter,
 .textarea.is-twitter {
@@ -3040,10 +3040,10 @@ a.box:active {
   box-shadow: 0 0 0 0.125em rgba(54, 54, 54, 0.25);
 }
 .select.is-primary select {
-  border-color: #ffb3b3;
+  border-color: #00d1b2;
 }
 .select.is-primary select:focus, .select.is-primary select.is-focused, .select.is-primary select:active, .select.is-primary select.is-active {
-  box-shadow: 0 0 0 0.125em rgba(255, 179, 179, 0.25);
+  box-shadow: 0 0 0 0.125em rgba(0, 209, 178, 0.25);
 }
 .select.is-link select {
   border-color: #72d0eb;
@@ -3070,10 +3070,10 @@ a.box:active {
   box-shadow: 0 0 0 0.125em rgba(255, 221, 87, 0.25);
 }
 .select.is-danger select {
-  border-color: #ff470f;
+  border-color: #ff3860;
 }
 .select.is-danger select:focus, .select.is-danger select.is-focused, .select.is-danger select:active, .select.is-danger select.is-active {
-  box-shadow: 0 0 0 0.125em rgba(255, 71, 15, 0.25);
+  box-shadow: 0 0 0 0.125em rgba(255, 56, 96, 0.25);
 }
 .select.is-twitter select {
   border-color: #55acee;
@@ -3231,22 +3231,22 @@ a.box:active {
   color: whitesmoke;
 }
 .file.is-primary .file-cta {
-  background-color: #ffb3b3;
+  background-color: #00d1b2;
   border-color: transparent;
   color: #fff;
 }
 .file.is-primary:hover .file-cta, .file.is-primary.is-hovered .file-cta {
-  background-color: #ffa6a6;
+  background-color: #00c4a7;
   border-color: transparent;
   color: #fff;
 }
 .file.is-primary:focus .file-cta, .file.is-primary.is-focused .file-cta {
   border-color: transparent;
-  box-shadow: 0 0 0.5em rgba(255, 179, 179, 0.25);
+  box-shadow: 0 0 0.5em rgba(0, 209, 178, 0.25);
   color: #fff;
 }
 .file.is-primary:active .file-cta, .file.is-primary.is-active .file-cta {
-  background-color: #ff9a9a;
+  background-color: #00b89c;
   border-color: transparent;
   color: #fff;
 }
@@ -3331,22 +3331,22 @@ a.box:active {
   color: rgba(0, 0, 0, 0.7);
 }
 .file.is-danger .file-cta {
-  background-color: #ff470f;
+  background-color: #ff3860;
   border-color: transparent;
   color: #fff;
 }
 .file.is-danger:hover .file-cta, .file.is-danger.is-hovered .file-cta {
-  background-color: #ff3d03;
+  background-color: #ff2b56;
   border-color: transparent;
   color: #fff;
 }
 .file.is-danger:focus .file-cta, .file.is-danger.is-focused .file-cta {
   border-color: transparent;
-  box-shadow: 0 0 0.5em rgba(255, 71, 15, 0.25);
+  box-shadow: 0 0 0.5em rgba(255, 56, 96, 0.25);
   color: #fff;
 }
 .file.is-danger:active .file-cta, .file.is-danger.is-active .file-cta {
-  background-color: #f53900;
+  background-color: #ff1f4b;
   border-color: transparent;
   color: #fff;
 }
@@ -3630,7 +3630,7 @@ a.box:active {
   color: #363636;
 }
 .help.is-primary {
-  color: #ffb3b3;
+  color: #00d1b2;
 }
 .help.is-link {
   color: #72d0eb;
@@ -3645,7 +3645,7 @@ a.box:active {
   color: #ffdd57;
 }
 .help.is-danger {
-  color: #ff470f;
+  color: #ff3860;
 }
 .help.is-twitter {
   color: #55acee;
@@ -4064,7 +4064,7 @@ a.box:active {
   color: whitesmoke;
 }
 .notification.is-primary {
-  background-color: #ffb3b3;
+  background-color: #00d1b2;
   color: #fff;
 }
 .notification.is-link {
@@ -4084,7 +4084,7 @@ a.box:active {
   color: rgba(0, 0, 0, 0.7);
 }
 .notification.is-danger {
-  background-color: #ff470f;
+  background-color: #ff3860;
   color: #fff;
 }
 .notification.is-twitter {
@@ -4164,13 +4164,13 @@ a.box:active {
   background-color: #363636;
 }
 .progress.is-primary::-webkit-progress-value {
-  background-color: #ffb3b3;
+  background-color: #00d1b2;
 }
 .progress.is-primary::-moz-progress-bar {
-  background-color: #ffb3b3;
+  background-color: #00d1b2;
 }
 .progress.is-primary::-ms-fill {
-  background-color: #ffb3b3;
+  background-color: #00d1b2;
 }
 .progress.is-link::-webkit-progress-value {
   background-color: #72d0eb;
@@ -4209,13 +4209,13 @@ a.box:active {
   background-color: #ffdd57;
 }
 .progress.is-danger::-webkit-progress-value {
-  background-color: #ff470f;
+  background-color: #ff3860;
 }
 .progress.is-danger::-moz-progress-bar {
-  background-color: #ff470f;
+  background-color: #ff3860;
 }
 .progress.is-danger::-ms-fill {
-  background-color: #ff470f;
+  background-color: #ff3860;
 }
 .progress.is-twitter::-webkit-progress-value {
   background-color: #55acee;
@@ -4292,8 +4292,8 @@ a.box:active {
 }
 .table td.is-primary,
 .table th.is-primary {
-  background-color: #ffb3b3;
-  border-color: #ffb3b3;
+  background-color: #00d1b2;
+  border-color: #00d1b2;
   color: #fff;
 }
 .table td.is-link,
@@ -4322,8 +4322,8 @@ a.box:active {
 }
 .table td.is-danger,
 .table th.is-danger {
-  background-color: #ff470f;
-  border-color: #ff470f;
+  background-color: #ff3860;
+  border-color: #ff3860;
   color: #fff;
 }
 .table td.is-twitter,
@@ -4351,7 +4351,7 @@ a.box:active {
 }
 .table td.is-selected,
 .table th.is-selected {
-  background-color: #ffb3b3;
+  background-color: #00d1b2;
   color: #fff;
 }
 .table td.is-selected a,
@@ -4365,7 +4365,7 @@ a.box:active {
   text-align: left;
 }
 .table tr.is-selected {
-  background-color: #ffb3b3;
+  background-color: #00d1b2;
   color: #fff;
 }
 .table tr.is-selected a,
@@ -4497,7 +4497,7 @@ a.box:active {
   color: whitesmoke;
 }
 .tag:not(body).is-primary {
-  background-color: #ffb3b3;
+  background-color: #00d1b2;
   color: #fff;
 }
 .tag:not(body).is-link {
@@ -4517,7 +4517,7 @@ a.box:active {
   color: rgba(0, 0, 0, 0.7);
 }
 .tag:not(body).is-danger {
-  background-color: #ff470f;
+  background-color: #ff3860;
   color: #fff;
 }
 .tag:not(body).is-twitter {
@@ -5309,15 +5309,15 @@ a.dropdown-item.is-active {
   color: #2a2a2a;
 }
 .message.is-primary {
-  background-color: #fff5f5;
+  background-color: #f5fffd;
 }
 .message.is-primary .message-header {
-  background-color: #ffb3b3;
+  background-color: #00d1b2;
   color: #fff;
 }
 .message.is-primary .message-body {
-  border-color: #ffb3b3;
-  color: #c21414;
+  border-color: #00d1b2;
+  color: #021310;
 }
 .message.is-link {
   background-color: #f6fcfe;
@@ -5364,15 +5364,15 @@ a.dropdown-item.is-active {
   color: #3c3108;
 }
 .message.is-danger {
-  background-color: #fff7f5;
+  background-color: #fff5f7;
 }
 .message.is-danger .message-header {
-  background-color: #ff470f;
+  background-color: #ff3860;
   color: #fff;
 }
 .message.is-danger .message-body {
-  border-color: #ff470f;
-  color: #a12b07;
+  border-color: #ff3860;
+  color: #cd0930;
 }
 .message.is-twitter {
   background-color: #f6fafe;
@@ -5816,7 +5816,7 @@ a.dropdown-item.is-active {
   }
 }
 .navbar.is-primary {
-  background-color: #ffb3b3;
+  background-color: #00d1b2;
   color: #fff;
 }
 .navbar.is-primary .navbar-brand > .navbar-item,
@@ -5826,7 +5826,7 @@ a.dropdown-item.is-active {
 .navbar.is-primary .navbar-brand > a.navbar-item:hover, .navbar.is-primary .navbar-brand > a.navbar-item.is-active,
 .navbar.is-primary .navbar-brand .navbar-link:hover,
 .navbar.is-primary .navbar-brand .navbar-link.is-active {
-  background-color: #ff9a9a;
+  background-color: #00b89c;
   color: #fff;
 }
 .navbar.is-primary .navbar-brand .navbar-link::after {
@@ -5846,7 +5846,7 @@ a.dropdown-item.is-active {
 .navbar.is-primary .navbar-end > a.navbar-item.is-active,
 .navbar.is-primary .navbar-end .navbar-link:hover,
 .navbar.is-primary .navbar-end .navbar-link.is-active {
-    background-color: #ff9a9a;
+    background-color: #00b89c;
     color: #fff;
   }
   .navbar.is-primary .navbar-start .navbar-link::after,
@@ -5855,11 +5855,11 @@ a.dropdown-item.is-active {
   }
   .navbar.is-primary .navbar-item.has-dropdown:hover .navbar-link,
 .navbar.is-primary .navbar-item.has-dropdown.is-active .navbar-link {
-    background-color: #ff9a9a;
+    background-color: #00b89c;
     color: #fff;
   }
   .navbar.is-primary .navbar-dropdown a.navbar-item.is-active {
-    background-color: #ffb3b3;
+    background-color: #00d1b2;
     color: #fff;
   }
 }
@@ -6056,7 +6056,7 @@ a.dropdown-item.is-active {
   }
 }
 .navbar.is-danger {
-  background-color: #ff470f;
+  background-color: #ff3860;
   color: #fff;
 }
 .navbar.is-danger .navbar-brand > .navbar-item,
@@ -6066,7 +6066,7 @@ a.dropdown-item.is-active {
 .navbar.is-danger .navbar-brand > a.navbar-item:hover, .navbar.is-danger .navbar-brand > a.navbar-item.is-active,
 .navbar.is-danger .navbar-brand .navbar-link:hover,
 .navbar.is-danger .navbar-brand .navbar-link.is-active {
-  background-color: #f53900;
+  background-color: #ff1f4b;
   color: #fff;
 }
 .navbar.is-danger .navbar-brand .navbar-link::after {
@@ -6086,7 +6086,7 @@ a.dropdown-item.is-active {
 .navbar.is-danger .navbar-end > a.navbar-item.is-active,
 .navbar.is-danger .navbar-end .navbar-link:hover,
 .navbar.is-danger .navbar-end .navbar-link.is-active {
-    background-color: #f53900;
+    background-color: #ff1f4b;
     color: #fff;
   }
   .navbar.is-danger .navbar-start .navbar-link::after,
@@ -6095,11 +6095,11 @@ a.dropdown-item.is-active {
   }
   .navbar.is-danger .navbar-item.has-dropdown:hover .navbar-link,
 .navbar.is-danger .navbar-item.has-dropdown.is-active .navbar-link {
-    background-color: #f53900;
+    background-color: #ff1f4b;
     color: #fff;
   }
   .navbar.is-danger .navbar-dropdown a.navbar-item.is-active {
-    background-color: #ff470f;
+    background-color: #ff3860;
     color: #fff;
   }
 }
@@ -8629,7 +8629,7 @@ label.panel-block:hover {
   }
 }
 .hero.is-primary {
-  background-color: #ffb3b3;
+  background-color: #00d1b2;
   color: #fff;
 }
 .hero.is-primary a:not(.button):not(.dropdown-item):not(.tag),
@@ -8648,7 +8648,7 @@ label.panel-block:hover {
 }
 @media screen and (max-width: 1023px) {
   .hero.is-primary .navbar-menu {
-    background-color: #ffb3b3;
+    background-color: #00d1b2;
   }
 }
 .hero.is-primary .navbar-item,
@@ -8658,7 +8658,7 @@ label.panel-block:hover {
 .hero.is-primary a.navbar-item:hover, .hero.is-primary a.navbar-item.is-active,
 .hero.is-primary .navbar-link:hover,
 .hero.is-primary .navbar-link.is-active {
-  background-color: #ff9a9a;
+  background-color: #00b89c;
   color: #fff;
 }
 .hero.is-primary .tabs a {
@@ -8680,14 +8680,14 @@ label.panel-block:hover {
 .hero.is-primary .tabs.is-boxed li.is-active a, .hero.is-primary .tabs.is-boxed li.is-active a:hover, .hero.is-primary .tabs.is-toggle li.is-active a, .hero.is-primary .tabs.is-toggle li.is-active a:hover {
   background-color: #fff;
   border-color: #fff;
-  color: #ffb3b3;
+  color: #00d1b2;
 }
 .hero.is-primary.is-bold {
-  background-image: linear-gradient(141deg, #ff8095 0%, #ffb3b3 71%, #ffd5cd 100%);
+  background-image: linear-gradient(141deg, #009e6c 0%, #00d1b2 71%, #00e7eb 100%);
 }
 @media screen and (max-width: 768px) {
   .hero.is-primary.is-bold .navbar-menu {
-    background-image: linear-gradient(141deg, #ff8095 0%, #ffb3b3 71%, #ffd5cd 100%);
+    background-image: linear-gradient(141deg, #009e6c 0%, #00d1b2 71%, #00e7eb 100%);
   }
 }
 .hero.is-link {
@@ -8939,7 +8939,7 @@ label.panel-block:hover {
   }
 }
 .hero.is-danger {
-  background-color: #ff470f;
+  background-color: #ff3860;
   color: #fff;
 }
 .hero.is-danger a:not(.button):not(.dropdown-item):not(.tag),
@@ -8958,7 +8958,7 @@ label.panel-block:hover {
 }
 @media screen and (max-width: 1023px) {
   .hero.is-danger .navbar-menu {
-    background-color: #ff470f;
+    background-color: #ff3860;
   }
 }
 .hero.is-danger .navbar-item,
@@ -8968,7 +8968,7 @@ label.panel-block:hover {
 .hero.is-danger a.navbar-item:hover, .hero.is-danger a.navbar-item.is-active,
 .hero.is-danger .navbar-link:hover,
 .hero.is-danger .navbar-link.is-active {
-  background-color: #f53900;
+  background-color: #ff1f4b;
   color: #fff;
 }
 .hero.is-danger .tabs a {
@@ -8990,14 +8990,14 @@ label.panel-block:hover {
 .hero.is-danger .tabs.is-boxed li.is-active a, .hero.is-danger .tabs.is-boxed li.is-active a:hover, .hero.is-danger .tabs.is-toggle li.is-active a, .hero.is-danger .tabs.is-toggle li.is-active a:hover {
   background-color: #fff;
   border-color: #fff;
-  color: #ff470f;
+  color: #ff3860;
 }
 .hero.is-danger.is-bold {
-  background-image: linear-gradient(141deg, #db0f00 0%, #ff470f 71%, #ff7e29 100%);
+  background-image: linear-gradient(141deg, #ff0561 0%, #ff3860 71%, #ff5257 100%);
 }
 @media screen and (max-width: 768px) {
   .hero.is-danger.is-bold .navbar-menu {
-    background-image: linear-gradient(141deg, #db0f00 0%, #ff470f 71%, #ff7e29 100%);
+    background-image: linear-gradient(141deg, #ff0561 0%, #ff3860 71%, #ff5257 100%);
   }
 }
 .hero.is-twitter {
