--- a/src/anim.css
+++ b/src/anim.css
@@ -23,3 +23,144 @@
         transform: translateY(0);
     }
 }
+
+/* #phase-header {
+    opacity: 0;
+    animation: fade-in ease 0.8s forwards;
+}
+
+#phase-1 {
+    opacity: 0;
+    animation: fade-in-right ease 1s forwards;
+    animation-delay: 0.2s;
+}
+
+
+#arrow-1 {
+    opacity: 0;
+    animation: fade-in-right ease 1s forwards;
+    animation-delay: 0.4s;
+}
+
+#phase-2 {
+    opacity: 0;
+    animation: fade-in-right ease 1s forwards;
+    animation-delay: 0.6s;
+}
+
+#arrow-2 {
+    opacity: 0;
+    animation: fade-in-right ease 1s forwards;
+    animation-delay: 0.8s;
+}
+
+#phase-3 {
+    opacity: 0;
+    animation: fade-in-right ease 1s forwards;
+    animation-delay: 1s;
+} */
+
+/* #call-to-action {
+    opacity: 0;
+    transform: scale(1);
+    animation: fade-in-pop ease 1s forwards;
+    animation-delay: 1.4s;
+} */
+
+.fade-in {
+    opacity: 0;
+    animation: fade-in ease 0.8s forwards;
+    animation-delay: 0.2s;
+}
+
+.fade-right-1 {
+    opacity: 0;
+    animation: fade-in-right ease 1s forwards;
+    animation-delay: 0.2s;
+}
+
+.fade-right-2 {
+    opacity: 0;
+    animation: fade-in-right ease 1s forwards;
+    animation-delay: 0.4s;
+}
+
+.fade-right-3 {
+    opacity: 0;
+    animation: fade-in-right ease 1s forwards;
+    animation-delay: 0.6s;
+}
+
+.fade-right-4 {
+    opacity: 0;
+    animation: fade-in-right ease 1s forwards;
+    animation-delay: 0.8s;
+}
+
+.fade-right-5 {
+    opacity: 0;
+    animation: fade-in-right ease 1s forwards;
+    animation-delay: 1s;
+}
+
+.fade-in-pop {
+    opacity: 0;
+    transform: scale(1);
+    animation: fade-in-pop ease 1s forwards;
+    animation-delay: 0.5s;
+}
+
+@keyframes fade-in-pop {
+    90% {
+        opacity: 1;
+    }
+    91% {
+        opacity: 1;
+        transform: scale(1.05);
+    }
+    92%, 100% {
+        opacity: 1;
+    }
+}
+
+
+@keyframes fade-in {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fade-in-grow {
+    from {
+        opacity: 0;
+        transform: scale(0);
+    }
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+@keyframes fade-in-right {
+    from {
+        opacity: 0;
+        transform: translateX(-15px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes grow {
+    from {
+        transform: scaleX(0);
+    }
+    to {
+        transform: scaleX(1);
+    }
+}
+
