--- a/src/anim.css
+++ b/src/anim.css
@@ -67,47 +67,49 @@
     animation-delay: 1.4s;
 } */
 
-.fade-in {
+.pre-anim {
     opacity: 0;
-    animation: fade-in ease 0.8s forwards;
-    animation-delay: 0.2s;
 }
 
-.fade-right-1 {
+.animated .fade-in {
+    opacity: 0;
+    animation: fade-in ease 0.8s forwards;
+}
+
+.animated .fade-right-1 {
+    opacity: 0;
+    animation: fade-in-right ease 1s forwards;
+}
+
+.animated .fade-right-2 {
     opacity: 0;
     animation: fade-in-right ease 1s forwards;
     animation-delay: 0.2s;
 }
 
-.fade-right-2 {
+.animated .fade-right-3 {
     opacity: 0;
     animation: fade-in-right ease 1s forwards;
     animation-delay: 0.4s;
 }
 
-.fade-right-3 {
+.animated .fade-right-4 {
     opacity: 0;
     animation: fade-in-right ease 1s forwards;
     animation-delay: 0.6s;
 }
 
-.fade-right-4 {
+.animated .fade-right-5 {
     opacity: 0;
     animation: fade-in-right ease 1s forwards;
     animation-delay: 0.8s;
 }
 
-.fade-right-5 {
-    opacity: 0;
-    animation: fade-in-right ease 1s forwards;
-    animation-delay: 1s;
-}
-
-.fade-in-pop {
+.animated .fade-in-pop {
     opacity: 0;
     transform: scale(1);
     animation: fade-in-pop ease 1s forwards;
-    animation-delay: 0.5s;
+    animation-delay: 0.3s;
 }
 
 @keyframes fade-in-pop {
