--- a/src/main.css
+++ b/src/main.css
@@ -1,75 +1,4 @@
 @charset "UTF-8";
-.card {
-  background-color: white;
-  box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
-  color: #4a4a4a;
-  max-width: 100%;
-  position: relative;
-}
-
-.card-header {
-  align-items: stretch;
-  box-shadow: 0 1px 2px rgba(10, 10, 10, 0.1);
-  display: flex;
-}
-
-.card-header-title {
-  align-items: center;
-  color: #363636;
-  display: flex;
-  flex-grow: 1;
-  font-weight: 700;
-  padding: 0.75rem;
-}
-.card-header-title.is-centered {
-  justify-content: center;
-}
-
-.card-header-icon {
-  align-items: center;
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  padding: 0.75rem;
-}
-
-.card-image {
-  display: block;
-  position: relative;
-}
-
-.card-content {
-  padding: 1.5rem;
-}
-
-.card-footer {
-  border-top: 1px solid #dbdbdb;
-  align-items: stretch;
-  display: flex;
-}
-
-.card-footer-item {
-  align-items: center;
-  display: flex;
-  flex-basis: 0;
-  flex-grow: 1;
-  flex-shrink: 0;
-  justify-content: center;
-  padding: 0.75rem;
-}
-.card-footer-item:not(:last-child) {
-  border-right: 1px solid #dbdbdb;
-}
-
-.card .media:not(:last-child) {
-  margin-bottom: 0.75rem;
-}
-
-.footer {
-  background-color: whitesmoke;
-  padding: 3rem 1.5rem 2rem;
-}
-
 /*! bulma.io v0.6.2 | MIT License | github.com/jgthms/bulma */
 @keyframes spinAround {
   from {
@@ -189,7 +118,7 @@ button,
 input,
 select,
 textarea {
-  font-family: "Open Sans", "Roboto", sans-serif;
+  font-family: "Open Sans", BlinkMacSystemFont, -apple-system, "Helvetica", "Arial", sans-serif;
 }
 
 code,
@@ -1333,7 +1262,7 @@ a.box:active {
   color: #363636;
 }
 .button:focus, .button.is-focused {
-  border-color: #a7e8bd;
+  border-color: #3273dc;
   color: #363636;
 }
 .button:focus:not(:active), .button.is-focused:not(:active) {
@@ -4693,7 +4622,7 @@ a.tag:hover {
 .title {
   color: #363636;
   font-size: 2rem;
-  font-weight: 600;
+  font-weight: 500;
   line-height: 1.125;
 }
 .title strong {
@@ -4731,7 +4660,7 @@ a.tag:hover {
 .subtitle {
   color: #4a4a4a;
   font-size: 1.25rem;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 1.25;
 }
 .subtitle strong {
@@ -4977,7 +4906,7 @@ a.tag:hover {
 
 .card {
   background-color: #fafafa;
-  box-shadow: 0 0px 0px;
+  box-shadow: 0 15px 35px rgba(50, 50, 93, 0.05), 0 5px 15px rgba(0, 0, 0, 0.07);
   color: #4a4a4a;
   max-width: 100%;
   position: relative;
@@ -6832,7 +6761,7 @@ a.navbar-link.is-active:not(:hover) {
 .pagination-previous:focus,
 .pagination-next:focus,
 .pagination-link:focus {
-  border-color: #a7e8bd;
+  border-color: #3273dc;
 }
 .pagination-previous:active,
 .pagination-next:active,
@@ -9365,4 +9294,200 @@ label.panel-block:hover {
 .footer {
   background-color: #234d32;
   padding: 3rem 1.5rem 2rem;
+}
+
+h1 {
+  font-family: "Permanent Marker";
+}
+
+h2, h3, h4 {
+  font-family: "Quicksand";
+}
+
+.header-desktop {
+  font-size: 6rem;
+  font-weight: 700;
+  padding-bottom: 0.5rem;
+}
+
+.header-mobile {
+  font-size: 4.5rem;
+  font-weight: 700;
+  padding-bottom: 1rem;
+}
+
+.subheader-desktop {
+  margin-bottom: -1.25rem;
+  margin-top: -17rem;
+}
+
+.subheader-mobile {
+  margin-bottom: 0.75rem;
+}
+
+.hero-title-mobile {
+  padding: 0rem 0rem 1.5rem 0rem;
+  margin-top: -0.75rem;
+}
+
+.hero-subtitle-desktop {
+  padding-bottom: 1.5rem;
+}
+
+.gradient {
+  background: linear-gradient(45deg, white 0%, rgba(255, 255, 255, 0.738) 19%, rgba(255, 255, 255, 0.541) 34%, rgba(255, 255, 255, 0.382) 47%, rgba(255, 255, 255, 0.278) 56.5%, rgba(255, 255, 255, 0.194) 65%, rgba(255, 255, 255, 0.126) 73%, rgba(255, 255, 255, 0.075) 80.2%, rgba(255, 255, 255, 0.042) 86.1%, rgba(255, 255, 255, 0.021) 91%, rgba(255, 255, 255, 0.008) 95.2%, rgba(255, 255, 255, 0.002) 98.2%, rgba(255, 255, 255, 0) 100%);
+}
+
+.card {
+  padding: 1rem 0.5rem 2rem 0.5rem;
+  margin-top: 2rem;
+  border-radius: 14px;
+}
+
+.card-image {
+  padding-top: 1rem;
+}
+
+.buttons-desktop {
+  margin-left: -0.5rem;
+}
+
+.buttons-mobile {
+  padding: 1rem;
+}
+
+.button {
+  margin: 0.5rem;
+}
+
+.scroll-mobile {
+  padding-top: 1rem;
+}
+
+.icon-text {
+  font-family: "Roboto";
+  padding-left: 0.33em;
+}
+
+.card-copy {
+  line-height: 1.7em;
+}
+
+.body-title-desktop {
+  padding: 1rem 3rem;
+}
+
+.body-title-mobile {
+  padding: 1rem 1rem 1.5rem 1rem;
+}
+
+.body-copy-desktop {
+  line-height: 1.8em;
+  padding: 0rem 3rem 1rem 3rem;
+}
+
+.body-copy-mobile {
+  line-height: 1.8em;
+  padding: 1rem;
+}
+
+.quote-body {
+  line-height: 1.8em;
+  padding: 0rem 3rem 1rem 3rem;
+}
+
+.divider {
+  margin: 2.5rem 0rem 0rem;
+  position: relative;
+  width: 40%;
+  left: 30%;
+}
+
+.fa-spinner {
+  margin-top: -5rem;
+}
+
+.discover-header-desktop {
+  font-size: 4em;
+  margin-top: -5rem;
+}
+
+.discover-header-mobile {
+  padding-bottom: 0.5rem;
+}
+
+.discover-subheader-desktop {
+  padding-bottom: 4rem;
+}
+
+.discover-subheader-mobile {
+  padding-bottom: 3rem;
+}
+
+.discover-copy-mobile {
+  padding-bottom: 0.5rem;
+}
+
+.preview-button-desktop {
+  margin-top: -4rem;
+}
+
+.tip-desktop {
+  padding-bottom: 4rem;
+}
+
+.tip-mobile {
+  padding: 1rem 2rem 2rem;
+}
+
+.nav-shadow {
+  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2);
+}
+
+.logo {
+  margin-left: -1rem;
+}
+
+.footer-content-mobile {
+  padding-left: 2rem;
+}
+
+.footer-stack {
+  padding-bottom: 3rem;
+}
+
+.footer-header {
+  padding-bottom: 1.5rem;
+}
+
+.footer-title {
+  padding: 0.25em 0em;
+}
+
+.footer-copy {
+  padding-right: 3.5rem;
+}
+
+.footer-link {
+  padding: 0.25rem 0rem;
+  letter-spacing: 0.5px;
+}
+
+.fa-heart {
+  color: #ffc0cb;
+}
+
+.error-background {
+  background-position: bottom;
+}
+
+.error-header-desktop {
+  margin-top: -20rem;
+  font-size: 6rem;
+  padding-bottom: 1rem;
+}
+
+.error-header-mobile {
+  font-size: 6rem;
+  padding-bottom: 1rem;
 }
