--- a/src/main.scss
+++ b/src/main.scss
@@ -99,3 +99,5 @@ h2, h3, h4 {
 @import "./stylesheets/header";
 @import "./stylesheets/footer";
 @import "./stylesheets/error";
+@import "./stylesheets/buttons";
+@import "./stylesheets/icons";
