Add Spotify connect button

--- a/views/landing.gohtml
+++ b/views/landing.gohtml
@@ -3,6 +3,7 @@
         <div class="hero-body">
             <h1 class="title">Discover Now</h1>
             <p class="subtitle">Don't wait for Monday</p>
+            <a class="button" href={{.URL}}>Connect to Spotify</a>
         </div>
     </div>
 {{end}}
