Handle errors from handler functions using errHandler wrapper

--- a/views/results.gohtml
+++ b/views/results.gohtml
@@ -2,7 +2,7 @@
     <div class="hero is-primary">
         <div class="hero-body">
             <h1 class="title">Results</h1>
-            <p class="subtitle">Here is your playlist</p>
+            <p class="subtitle">Here is your playlist: {{.URI}}</p>
         </div>
     </div>
 {{end}}
