Add fileserver to serve static resources. Add background image to landing page.

--- a/views/landing.gohtml
+++ b/views/landing.gohtml
@@ -1,5 +1,5 @@
 {{define "page"}}
-    <section class="hero is-fullheight">
+    <section class="hero is-fullheight splash">
         <div class="hero-body">
             <div class="container">
                 <h2 class="has-text-weight-medium is-size-3">
