--- a/views/layouts/frame.gohtml
+++ b/views/layouts/frame.gohtml
@@ -6,9 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Discover Now</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
+        <link rel="stylesheet" href="/static/stylesheets/landing.css">
     </head>
     <body>
-        <div class="container">
+        <div>
             {{template "page" .}}
         </div>
     </body>
