Apply permanent marker font to splash header

--- a/sass/landing.scss
+++ b/sass/landing.scss
@@ -3,4 +3,8 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+
+  &__header {
+    font-family: "Permanent Marker", serif;
+  }
 }
