--- a/views/landing.gohtml
+++ b/views/landing.gohtml
@@ -1,11 +1,11 @@
 {{define "page"}}
-    <section class="hero is-fullheight splash">
+    <section class="splash hero is-fullheight">
         <div class="hero-body">
             <div class="container">
                 <h2 class="has-text-weight-medium is-size-3">
                     Don't wait for Monday.
                 </h2>
-                <h1 class="title">
+                <h1 class="splash__header title">
                     Discover Now
                 </h1>
                 <div class="buttons">
