Apply Quicksand font to splash subheader

--- a/sass/landing.scss
+++ b/sass/landing.scss
@@ -7,4 +7,8 @@
   &__header {
     font-family: "Permanent Marker", serif;
   }
+
+  &__subheader {
+    font-family: "Quicksand", sans-serif;
+  }
 }
