--- a/views/landing.gohtml
+++ b/views/landing.gohtml
@@ -2,7 +2,7 @@
     <section class="splash hero is-fullheight">
         <div class="hero-body">
             <div class="container">
-                <h2 class="has-text-weight-medium is-size-3">
+                <h2 class="splash__subheader has-text-weight-medium is-size-3">
                     Don't wait for Monday.
                 </h2>
                 <h1 class="splash__header title">
