--- a/static/stylesheets/landing.css
+++ b/static/stylesheets/landing.css
@@ -7,5 +7,8 @@
 .splash__header {
   font-family: "Permanent Marker", serif;
 }
+.splash__subheader {
+  font-family: "Quicksand", sans-serif;
+}
 
 /*# sourceMappingURL=landing.css.map */
