--- a/views/landing.gohtml
+++ b/views/landing.gohtml
@@ -1,25 +1,27 @@
 {{define "page"}}
-    <section class="splash hero is-fullheight">
+    <section class="landing hero is-fullheight">
         <div class="hero-body">
             <div class="container">
-                <h2 class="splash__subheader has-text-weight-medium is-size-3">
-                    Don't wait for Monday.
-                </h2>
-                <h1 class="splash__header title">
-                    Discover Now
-                </h1>
-                <div class="buttons">
-                    <a class="button is-medium is-primary" href="{{.URL}}">
-                        Connect
-                    </a>
-                    <a class="button is-medium is-dark is-outlined">
-                        Explore
-                    </a>
-                </div>
-                <div>
-                    <a class="is-size-5">
-                        Learn More
-                    </a>
+                <div class="splash">
+                    <h2 class="splash__subheader has-text-weight-medium is-size-3">
+                        Don't wait for Monday.
+                    </h2>
+                    <h1 class="splash__header title">
+                        Discover Now
+                    </h1>
+                    <div class="buttons">
+                        <a class="button is-medium is-primary" href="{{.URL}}">
+                            Connect
+                        </a>
+                        <a class="button is-medium is-dark is-outlined">
+                            Explore
+                        </a>
+                    </div>
+                    <div>
+                        <a class="is-size-5">
+                            Learn More
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
