--- a/static/stylesheets/landing.css
+++ b/static/stylesheets/landing.css
@@ -1,14 +1,20 @@
-.splash {
+.landing {
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(/static/images/cassette.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+.splash {
+  margin-top: -17rem;
+}
 .splash__header {
   font-family: "Permanent Marker", serif;
+  font-size: 6rem;
 }
 .splash__subheader {
   font-family: "Quicksand", sans-serif;
+  margin-bottom: -1.25rem;
 }
 
 /*# sourceMappingURL=landing.css.map */
