--- a/views/layouts/frame.gohtml
+++ b/views/layouts/frame.gohtml
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Permanent+Marker&text=Discover%20NowError404">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500&text=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz%20%21%22%27%2C%2D%2E%40" rel="stylesheet">
         <link rel="stylesheet" href="/static/stylesheets/landing.css">
+        <link rel="stylesheet" href="/static/stylesheets/splash.css">
     </head>
     <body>
         <div>
