Change splash text and buttons to match design plan

--- a/views/home.gohtml
+++ b/views/home.gohtml
@@ -3,23 +3,38 @@
         <div class="hero-body">
             <div class="container">
                 <div class="splash">
-                    <h2 class="splash__subheader has-text-weight-medium is-size-3">
+                    <h2 class="splash__subheader is-size-3">
                         Don't wait for Monday.
                     </h2>
                     <h1 class="splash__header title">
                         Discover Now
                     </h1>
                     <div class="buttons">
-                        <a class="button is-medium is-primary" href="{{.URL}}">
-                            Connect
+                        <a class="button is-medium is-dark is-outlined" href="https://github.com/Henry-Sarabia/discovernow">
+                            <span class="icon">
+                                <i class="fab fa-github fa-lg"></i>
+                            </span>
+                            <span class="button__text">
+                                Explore
+                            </span>
                         </a>
-                        <a class="button is-medium is-dark is-outlined">
-                            Explore
+                        <a class="button is-medium is-primary" href="{{.URL}}">
+                            <span class="icon">
+                                <i class="fab fa-spotify fa-lg"></i>
+                            </span>
+                            <span class="button__text">
+                                Connect
+                            </span>
                         </a>
                     </div>
                     <div>
-                        <a class="is-size-5">
-                            Learn More
+                        <a class="anchor is-size-5">
+                            <span class="anchor__text">
+                                Learn more
+                            </span>
+                            <span class="anchor__icon icon">
+                                <i class="fas fa-angle-down"></i>
+                            </span>
                         </a>
                     </div>
                 </div>
