--- a/views/layouts/frame.gohtml
+++ b/views/layouts/frame.gohtml
@@ -6,10 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Discover Now</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
+        <script defer src="https://use.fontawesome.com/releases/v5.8.1/js/all.js" integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Permanent+Marker&text=Discover%20NowError404">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500&text=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz%20%21%22%27%2C%2D%2E%40" rel="stylesheet">
         <link rel="stylesheet" href="/static/stylesheets/landing.css">
         <link rel="stylesheet" href="/static/stylesheets/splash.css">
+        <link rel="stylesheet" href="/static/stylesheets/button.css">
+        <link rel="stylesheet" href="/static/stylesheets/anchor.css">
     </head>
     <body>
         <div>
